# JumperBoy-emulator

./: .gitignore  CMakeLists.txt  CMakePresets.json  JumperBoy.sln  LICENSE  README.md  compile.sh  jumper_boy.code-workspace
docs/: cgb_changes.txt  structure-problems.txt
include/: bus.h  cartridge.h  common.h  cpu.h  debugging.h  gb.h  input_handler.h  instructions.h  interrupt.h  io.h  joypad.h  ram.h  timer.h  user_interface.h
include/apu/: apu.h  channel.h  noise_channel.h  square_channel.h  wave_channel.h
include/cartridge/: boot.h  cartridge.h  mbc.h
include/cpu/: cpu.h  debugging.h  instructions.h  interrupt.h
include/io/: input_handler.h  io.h  joypad.h  speed_manager.h  timer.h
include/ppu/: dma.h  graphics_state.h  lcd.h  pixel_transfer.h  ppu.h  vmem.h  vram.h
include/ui/: audio_manager.h  audio_master.h  game_window.h  inputs.h  user_interface.h  user_settings.h
libs/: sdl2-config.cmake
libs/SDL2/: sdl2-config.cmake
libs/SDL2/include/SDL/: SDL_rwops.h  SDL_stdinc.h
libs/imgui/: example-main.txt
libs/json/: json.hpp
libs/tfd/: tinyfiledialogs.cpp  tinyfiledialogs.h
settings/: controls.json
src/: CMakeLists.txt  JumperBoy.vcxproj  JumperBoy.vcxproj.filters  bus.cpp  cartridge.cpp  cpu.cpp  gb.cpp  input_handler.cpp  instructions.cpp  interrupt.cpp  io.cpp  joypad.cpp  jumper_boy.cpp  ram.cpp  user_interface.cpp
src/JumperBoy.dir/Debug/: JumperBoy.exe.recipe  JumperBoy.ilk
src/JumperBoy.dir/Debug/JumperBoy.tlog/: CL.command.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.write.1.tlog  JumperBoy.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
src/JumperBoy.dir/Release/: JumperBoy.exe.recipe
src/JumperBoy.dir/Release/JumperBoy.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.read.1.tlog  JumperBoy.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
src/apu/: apu.cpp  apu_channel1.cpp  apu_channel2.cpp  apu_channel3.cpp  apu_channel4.cpp  apu_generation.cpp  apu_mixing.cpp  channel.cpp  noise_channel.cpp  square_channel.cpp  wave_channel.cpp
src/cartridge/: boot.cpp  cartridge.cpp  mbc.cpp  mbc_commons.cpp
src/cpu/: cpu.cpp  cpu_execute.cpp  cpu_fetch.cpp  cpu_registers.cpp  debugging.cpp  instructions.cpp  interrupt.cpp
src/headers/: bus.h  cartridge.h  common.h  cpu.h  instructions.h  jumper_boy.h  ppu.h  timer.h
src/impl/: bus.cpp  cartridge.cpp  cpu.cpp  jumper_boy.cpp  tinyfiledialogs.cpp
src/io/: input_handler.cpp  io.cpp  joypad.cpp  speed_manager.cpp  timer.cpp
src/ppu/: dma.cpp  graphics_state.cpp  lcd.cpp  pixel_transfer.cpp  ppu.cpp  ppu_fifo.cpp  ppu_pipeline.cpp  vmem.cpp  vram.cpp
src/ui/: audio_manager.cpp  audio_master.cpp  control_panel.cpp  game_window.cpp  inputs.cpp  user_audio.cpp  user_inputs.cpp  user_interface.cpp  user_settings.cpp  user_visuals.cpp
